--- a/projects/mona-ui/src/lib/dropdowns/multi-select/components/multi-select/multi-select.component.scss
+++ b/projects/mona-ui/src/lib/dropdowns/multi-select/components/multi-select/multi-select.component.scss
@@ -1,10 +1,4 @@
-div.mona-multi-select {
-    display: inherit;
-    width: 100%;
-    outline: none;
-}
-
-div.mona-multi-select-value {
+.mona-multi-select-value {
     display: flex;
     align-items: center;
     width: 100%;
