refactor: grid style updates

--- a/projects/mona-ui/src/lib/grid/components/grid-filter-menu/grid-filter-menu.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-filter-menu/grid-filter-menu.component.html
@@ -1,3 +1,4 @@
-<button monaButton [flat]="true" (click)="openPopup()" [ngClass]="{'mona-grid-filtered': column.filtered}">
+<button monaButton [flat]="true" (click)="openPopup()"
+        [ngClass]="{'mona-grid-filtered': column().filtered}">
     <fa-icon [icon]="filterIcon"></fa-icon>
 </button>
