--- a/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
@@ -3,7 +3,7 @@
     height: 100%;
 }
 
-div.mona-grid-cell {
+.mona-grid-cell {
     display: flex;
     align-items: center;
     overflow: hidden;
@@ -12,18 +12,18 @@ div.mona-grid-cell {
     height: 100%;
 }
 
-span.mona-grid-cell-text {
+.mona-grid-cell-text {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
-div.mona-grid-cell-editing {
+.mona-grid-cell-editing {
     padding: 1px;
 }
 
 
-form.mona-grid-cell-edit-form {
+.mona-grid-cell-edit-form {
     width: 100%;
     height: 100%;
     display: inline-flex;
