--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
@@ -1,17 +1,3 @@
-:host {
-    position: relative;
-    display: block;
-    overflow: hidden;
-}
-
-div.mona-grid {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    background: var(--mona-background-dark);
-    border: 1px solid var(--mona-border-color);
-}
-
 .mona-grid-group-panel {
     display: flex;
     align-items: center;
@@ -59,7 +45,7 @@ mona-grid-list {
     border-top: 1px solid var(--mona-border-color);
 }
 
-div.mona-grid-column-resizer {
+.mona-grid-column-resizer {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -70,7 +56,7 @@ div.mona-grid-column-resizer {
     right: -5px;
 }
 
-div.mona-grid-column-wrap {
+.mona-grid-column-wrap {
     width: 100%;
     height: 100%;
     display: flex;
@@ -80,7 +66,7 @@ div.mona-grid-column-wrap {
     overflow: hidden;
 }
 
-span.mona-grid-column-title {
+.mona-grid-column-title {
     flex: 1;
     padding: 5px 11px;
     overflow: hidden;
@@ -89,14 +75,14 @@ span.mona-grid-column-title {
     font-weight: bold;
 }
 
-div.mona-grid-column-actions {
+.mona-grid-column-actions {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0 4px;
 }
 
-span.mona-grid-column-drop-hint {
+.mona-grid-column-drop-hint {
     position: absolute;
     display: flex;
     width: 2px;
