--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -754,6 +754,13 @@ mona-filter-input.mona-popup-filter-input,
 
 /** Grid */
 .mona-grid {
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    background: var(--mona-background-dark);
+    border: 1px solid var(--mona-border-color);
     color: var(--mona-text);
     @include font-medium;
     border-radius: var(--mona-border-radius);
@@ -768,6 +775,9 @@ mona-filter-input.mona-popup-filter-input,
 }
 
 .mona-grid-list {
+    height: 100%;
+    overflow: auto scroll;
+    width: 100%;
     @include scrollbars-thick;
     & tr {
         &.mona-selected {
@@ -797,7 +807,7 @@ mona-filter-input.mona-popup-filter-input,
     }
 }
 
-button.mona-grid-filtered {
+.mona-grid-filtered {
     color: var(--mona-primary-light);
 }
 
