--- a/projects/mona-ui/src/lib/inputs/color-gradient/components/alpha-slider/alpha-slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/color-gradient/components/alpha-slider/alpha-slider.component.scss
@@ -1,13 +1,12 @@
-div.mona-alpha-slider {
+.mona-alpha-slider {
     position: relative;
     width: 100%;
     height: 16px;
-
     user-select: none;
     cursor: pointer;
 }
 
-div.mona-alpha-slider-color {
+.mona-alpha-slider-color {
     position: absolute;
     display: block;
     width: 100%;
@@ -16,7 +15,7 @@ div.mona-alpha-slider-color {
     z-index: 2;
 }
 
-div.mona-alpha-slider-transparency {
+.mona-alpha-slider-transparency {
     position: absolute;
     display: block;
     width: 100%;
@@ -26,7 +25,7 @@ div.mona-alpha-slider-transparency {
     background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAuSURBVHgBxYyxDQAwDMJIL+YT+DjtzFRliUfLcklqBCRT4eCTxbD6kdL2/LgYXqpvCbs3kBv/AAAAAElFTkSuQmCC) center repeat
 }
 
-div.mona-alpha-slider-handle {
+.mona-alpha-slider-handle {
     height: 14px;
     box-shadow: 0 0 0 1px white inset, 0 0 0 1px var(--mona-border-color), 0 0 0 2px var(--mona-border-color) inset;
     position: absolute;
