--- a/projects/mona-ui/src/lib/inputs/color-gradient/components/color-gradient/color-gradient.component.scss
+++ b/projects/mona-ui/src/lib/inputs/color-gradient/components/color-gradient/color-gradient.component.scss
@@ -1,41 +1,29 @@
-div.mona-color-gradient {
-    display: flex;
-}
-
-div.mona-color-gradient-color-area {
-    display: flex;
-    flex-direction: column;
-    user-select: none;
-    padding: 10px;
-    row-gap: 8px;
-}
-
-div.mona-color-gradient-slider-area {
+.mona-color-gradient-slider-area {
     display: flex;
     column-gap: 12px;
 }
 
-div.mona-color-gradient-preview {
+.mona-color-gradient-preview {
     width: 40px;
     height: 40px;
     display: flex;
 }
 
-div.mona-color-gradient-sliders {
+.mona-color-gradient-sliders {
     display: flex;
     flex: 1;
     flex-direction: column;
     row-gap: 8px;
 }
 
-div.mona-hsv-rectangle {
+.mona-hsv-rectangle {
     position: relative;
     width: 100%;
     height: 160px;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), black), linear-gradient(to right, white, rgba(255, 255, 255, 0));
 }
 
-div.mona-hsv-rectangle-pointer {
+.mona-hsv-rectangle-pointer {
     position: absolute;
     width: 12px;
     height: 12px;
@@ -44,46 +32,46 @@ div.mona-hsv-rectangle-pointer {
     border-radius: var(--mona-border-radius);
 }
 
-div.mona-color-gradient-numeric-inputs {
+.mona-color-gradient-numeric-inputs {
     display: flex;
     flex-direction: row;
     column-gap: 12px;
 }
 
-div.mona-color-gradient-channel-switch {
+.mona-color-gradient-channel-switch {
     width: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-div.mona-color-gradient-values {
+.mona-color-gradient-values {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-left: 12px;
 }
 
-div.mona-color-gradient-inputs {
+.mona-color-gradient-inputs {
     display: flex;
     flex-direction: column;
     row-gap: 8px;
 }
 
-div.mona-color-gradient-hex-input {
+.mona-color-gradient-hex-input {
     & mona-text-box {
         width: 100%;
     }
 }
 
-div.mona-color-gradient-rgb-inputs,
-div.mona-color-gradient-hsv-inputs {
+.mona-color-gradient-rgb-inputs,
+.mona-color-gradient-hsv-inputs {
     display: flex;
     flex-direction: row;
     column-gap: 4px;
 }
 
-span.mona-color-gradient-hex-input-prefix {
+.mona-color-gradient-hex-input-prefix {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -95,7 +83,7 @@ mona-numeric-text-box {
     width: 72px;
 }
 
-span.mona-color-gradient-value-input-prefix {
+.mona-color-gradient-value-input-prefix {
     display: inline-flex;
     align-items: center;
     justify-content: center;
