--- a/projects/mona-ui/src/lib/inputs/color-gradient/components/hue-slider/hue-slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/color-gradient/components/hue-slider/hue-slider.component.scss
@@ -1,4 +1,4 @@
-div.mona-hue-slider {
+.mona-hue-slider {
     position: relative;
     width: 100%;
     height: 16px;
@@ -7,7 +7,7 @@ div.mona-hue-slider {
     cursor: pointer;
 }
 
-div.mona-hue-slider-handle {
+.mona-hue-slider-handle {
     height: 14px;
     box-shadow: 0 0 0 1px white inset, 0 0 0 1px var(--mona-border-color), 0 0 0 2px var(--mona-border-color) inset;
     position: absolute;
