refactor: color palette style updates

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -766,7 +766,7 @@
                                         </mona-splitter-pane>
                                         <mona-splitter-pane [collapsible]="true">
                                             <div style="width: 100%; height: 100%; padding: 20px;">
-                                                <button monaButton>Open Dialog</button>
+                                                <mona-color-palette></mona-color-palette>
                                             </div>
                                         </mona-splitter-pane>
                                     </mona-splitter>
