--- a/projects/mona-ui/src/lib/inputs/color-palette/color-palette.component.html
+++ b/projects/mona-ui/src/lib/inputs/color-palette/color-palette.component.html
@@ -1,7 +1,4 @@
-<div class="mona-color-palette" [style.grid-template-columns]="'repeat('+colorScheme().columns+', minmax('+tileSize+'px, 1fr))'"
-     [style.grid-auto-rows]="tileSize+'px'">
-    <ng-container *ngFor="let color of colorScheme().colors">
-        <div class="mona-color-cell" [ngClass]="{'mona-selected': color===selectedColor}"
-             [style.background-color]="color" (click)="onColorSelect(color)"></div>
-    </ng-container>
-</div>
+@for (color of colorScheme().colors; track color) {
+    <div class="mona-color-cell" [ngClass]="{'mona-selected': color===selectedColor()}"
+         [style.background-color]="color" (click)="onColorSelect(color)"></div>
+}
