--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -539,7 +539,7 @@
                                                  style="color: #fafd0f;"></fa-icon>
                                     </ng-template>
                                 </mona-slider>
-                                <mona-numeric-text-box [(ngModel)]="sliderValue" [min]="0" [max]="32"></mona-numeric-text-box>
+                                <mona-numeric-text-box [(ngModel)]="sliderValue" [min]="0" [max]="32" style="width: 170px;"></mona-numeric-text-box>
                             </div>
 
                             <div style="display: flex; align-items: center; justify-content: center;">
@@ -559,8 +559,8 @@
                                                  style="color: #fafd0f;"></fa-icon>
                                     </ng-template>
                                 </mona-range-slider>
-                                <mona-numeric-text-box [ngModel]="rangedSliderValues[0]" (ngModelChange)="rangedSliderValues=[+$event!, rangedSliderValues[1]]"></mona-numeric-text-box>
-                                <mona-numeric-text-box [ngModel]="rangedSliderValues[1]" (ngModelChange)="rangedSliderValues=[rangedSliderValues[0], +$event!]"></mona-numeric-text-box>
+                                <mona-numeric-text-box [ngModel]="rangedSliderValues[0]" (ngModelChange)="rangedSliderValues=[+$event!, rangedSliderValues[1]]" style="width: 170px;"></mona-numeric-text-box>
+                                <mona-numeric-text-box [ngModel]="rangedSliderValues[1]" (ngModelChange)="rangedSliderValues=[rangedSliderValues[0], +$event!]" style="width: 170px;"></mona-numeric-text-box>
                             </div>
 
                             <div style="display: flex; align-items: center; justify-content: center; margin-top: 40px;">
