refactor: check box style updates

--- a/projects/mona-ui/src/lib/inputs/check-box/components/check-box/check-box.component.html
+++ b/projects/mona-ui/src/lib/inputs/check-box/components/check-box/check-box.component.html
@@ -1,4 +1,4 @@
-<label class="mona-check-box" [class.mona-disabled]="disabled()">
+<label class="mona-check-box-label">
     @if (labelPosition() === 'before') {
         <span>{{label()}}</span>
     }
